force-app/main/default/objects/maps__BaseObject__c/maps__BaseObject__c.object-meta.xml
<CustomObject>
    <label>Maps Base Object</label>
    <nameField>
        <label>Base Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Maps Base Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>