force-app/main/default/objects/maps__BaseObject__c/fields/maps__AddressObject__c.field-meta.xml
<CustomField>
    <fullName>maps__AddressObject__c</fullName>
    <label>Address Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>