force-app/main/default/objects/maps__BaseObject__c/fields/maps__AutoAssignmentDirtyFlag__c.field-meta.xml
<CustomField>
    <fullName>maps__AutoAssignmentDirtyFlag__c</fullName>
    <label>Auto Assignment Dirty Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>