force-app/main/default/objects/maps__BaseObject__c/fields/maps__CleanCity__c.field-meta.xml
<CustomField>
    <fullName>maps__CleanCity__c</fullName>
    <label>Clean City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>