force-app/main/default/objects/maps__BaseObject__c/fields/maps__CleanCountry__c.field-meta.xml
<CustomField>
    <fullName>maps__CleanCountry__c</fullName>
    <label>Clean Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>