force-app/main/default/objects/maps__BaseObject__c/fields/maps__CleanDistrict__c.field-meta.xml
<CustomField>
    <fullName>maps__CleanDistrict__c</fullName>
    <label>Clean District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>