force-app/main/default/objects/maps__BaseObject__c/fields/maps__CleanPostalCode__c.field-meta.xml
<CustomField>
    <fullName>maps__CleanPostalCode__c</fullName>
    <label>Clean Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>