force-app/main/default/objects/maps__BaseObject__c/fields/maps__CleanStreet__c.field-meta.xml
<CustomField>
    <fullName>maps__CleanStreet__c</fullName>
    <label>Clean Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>