force-app/main/default/objects/maps__BaseObject__c/fields/maps__DeviceVendor__c.field-meta.xml
<CustomField>
    <fullName>maps__DeviceVendor__c</fullName>
    <label>Device Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>