force-app/main/default/objects/maps__BaseObject__c/fields/maps__DisableGlobalSearch__c.field-meta.xml
<CustomField>
    <fullName>maps__DisableGlobalSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disables searching for records inside Maps with this Base Object.</description>
    <label>Disable Global Search</label>
    <type>Checkbox</type>
</CustomField>