force-app/main/default/objects/maps__BaseObject__c/fields/maps__LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>maps__LastUpdated__c</fullName>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>