force-app/main/default/objects/maps__BaseObject__c/fields/maps__Latitude__c.field-meta.xml
<CustomField>
    <fullName>maps__Latitude__c</fullName>
    <label>Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>