force-app/main/default/objects/maps__BaseObject__c/fields/maps__MapIt_Proximity_On__c.field-meta.xml
<CustomField>
    <fullName>maps__MapIt_Proximity_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MapIt Proximity On</label>
    <type>Checkbox</type>
</CustomField>