force-app/main/default/objects/maps__BaseObject__c/fields/maps__MapIt_Proximity_Radius__c.field-meta.xml
<CustomField>
    <fullName>maps__MapIt_Proximity_Radius__c</fullName>
    <label>MapIt Proximity Radius</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>