force-app/main/default/objects/maps__BaseObject__c/fields/maps__MapIt_Show_Inside_Shape__c.field-meta.xml
<CustomField>
    <fullName>maps__MapIt_Show_Inside_Shape__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MapIt Show Inside Shape</label>
    <type>Checkbox</type>
</CustomField>