force-app/main/default/objects/maps__BaseObject__c/fields/maps__MapIt_Zoom_Control__c.field-meta.xml
<CustomField>
    <fullName>maps__MapIt_Zoom_Control__c</fullName>
    <defaultValue>16</defaultValue>
    <label>MapIt Zoom Control</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>