force-app/main/default/objects/maps__BaseObject__c/fields/maps__MapIt_Zoom_To_Fit__c.field-meta.xml
<CustomField>
    <fullName>maps__MapIt_Zoom_To_Fit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MapIt Zoom To Fit</label>
    <type>Checkbox</type>
</CustomField>