force-app/main/default/objects/maps__BaseObject__c/fields/maps__Name__c.field-meta.xml
<CustomField>
    <fullName>maps__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>