force-app/main/default/objects/maps__BaseObject__c/fields/maps__PolylineVertices__c.field-meta.xml
<CustomField>
    <fullName>maps__PolylineVertices__c</fullName>
    <label>Polyline Vertices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>