force-app/main/default/objects/maps__BaseObject__c/fields/maps__PostalCode__c.field-meta.xml
<CustomField>
    <fullName>maps__PostalCode__c</fullName>
    <label>Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>