force-app/main/default/objects/maps__BaseObject__c/fields/maps__PriorityField__c.field-meta.xml
<CustomField>
    <fullName>maps__PriorityField__c</fullName>
    <label>Priority Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>