force-app/main/default/objects/maps__BaseObject__c/fields/maps__Processing__c.field-meta.xml
<CustomField>
    <fullName>maps__Processing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Processing</label>
    <type>Checkbox</type>
</CustomField>