force-app/main/default/objects/maps__BaseObject__c/fields/maps__Quality__c.field-meta.xml
<CustomField>
    <fullName>maps__Quality__c</fullName>
    <label>Quality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>