force-app/main/default/objects/maps__BaseObject__c/fields/maps__RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>maps__RecordTypeId__c</fullName>
    <label>Record Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>