force-app/main/default/objects/maps__BaseObject__c/fields/maps__RoutingEndTime__c.field-meta.xml
<CustomField>
    <fullName>maps__RoutingEndTime__c</fullName>
    <label>Routing End Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>