force-app/main/default/objects/maps__BaseObject__c/fields/maps__RoutingHasAddress__c.field-meta.xml
<CustomField>
    <fullName>maps__RoutingHasAddress__c</fullName>
    <label>Routing Has Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>