force-app/main/default/objects/maps__BaseObject__c/fields/maps__RoutingIsFlexible__c.field-meta.xml
<CustomField>
    <fullName>maps__RoutingIsFlexible__c</fullName>
    <label>Routing Is Flexible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>