force-app/main/default/objects/maps__BaseObject__c/fields/maps__RoutingStartTime__c.field-meta.xml
<CustomField>
    <fullName>maps__RoutingStartTime__c</fullName>
    <label>Routing Start Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>