force-app/main/default/objects/maps__BaseObject__c/fields/maps__Settings__c.field-meta.xml
<CustomField>
    <fullName>maps__Settings__c</fullName>
    <label>Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>