force-app/main/default/objects/maps__BaseObject__c/fields/maps__Shape__c.field-meta.xml
<CustomField>
    <fullName>maps__Shape__c</fullName>
    <description>This field is used to store lookup field names to Maps territories which can be set up for Geofence Layers.</description>
    <label>Shape</label>
    <length>255</length>
    <type>Text</type>
</CustomField>