force-app/main/default/objects/maps__BaseObject__c/fields/maps__Similarity__c.field-meta.xml
<CustomField>
    <fullName>maps__Similarity__c</fullName>
    <label>Similarity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>