force-app/main/default/objects/maps__BaseObject__c/fields/maps__SkipFailedGeocodes__c.field-meta.xml
<CustomField>
    <fullName>maps__SkipFailedGeocodes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Failed Geocodes</label>
    <type>Checkbox</type>
</CustomField>