force-app/main/default/objects/maps__BaseObject__c/fields/maps__State__c.field-meta.xml
<CustomField>
    <fullName>maps__State__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>