force-app/main/default/objects/maps__BaseObject__c/fields/maps__testLat__c.field-meta.xml
<CustomField>
    <fullName>maps__testLat__c</fullName>
    <label>testLat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>