force-app/main/default/objects/maps__BaseObject__c/fields/maps__Tooltip13__c.field-meta.xml
<CustomField>
    <fullName>maps__Tooltip13__c</fullName>
    <label>Tooltip Thirteen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>