force-app/main/default/objects/maps__BaseObject__c/fields/maps__Tooltip15__c.field-meta.xml
<CustomField>
    <fullName>maps__Tooltip15__c</fullName>
    <label>Tooltip Fifteen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>