force-app/main/default/objects/maps__BaseObject__c/fields/maps__VerifiedLatitude__c.field-meta.xml
<CustomField>
    <fullName>maps__VerifiedLatitude__c</fullName>
    <label>Verified Latitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>