force-app/main/default/objects/maps__BaseObject__c/fields/maps__VerifiedLongitude__c.field-meta.xml
<CustomField>
    <fullName>maps__VerifiedLongitude__c</fullName>
    <label>Verified Longitude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>