force-app/main/default/objects/maps__BaseObject__c/listViews/maps__All.listView-meta.xml
<ListView>
    <fullName>maps__All</fullName>
    <columns>NAME</columns>
    <columns>maps__Name__c</columns>
    <columns>maps__Processing__c</columns>
    <columns>maps__AddressObject__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>